--- a/templates/theaterList.html
+++ b/templates/theaterList.html
@@ -4,7 +4,7 @@
     {% for info in theater_list %}
         
     <tr>
-        <td><a href="theater/{{ info.name }}"><h2>{{ info.name }}</h2></a>
+        <td><a href="/theater/{{ info.name }}"><h2>{{ info.name }}</h2></a>
             {{ info.place }}
         </td>
     </tr>
