--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                         <a class="nav-link" href="#trending">電影熱映</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#genre">類型</a>
+                        <a class="nav-link" href="/type">類型</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/theater">影城</a>
