--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
     <!-- 固定的導航欄，背景色已設為淡紫色 -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/index/">Movie Site</a>
+            <a class="navbar-brand" href="/">Movie Site</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
