--- a/templates/theater.html
+++ b/templates/theater.html
@@ -8,7 +8,7 @@
         <tr>
             <td>
                 
-                <a href="/{{ theaterName }}/{{ movie }}" >{{ movie }}</a>
+                <a href="/theater/{{ theaterName }}/{{ movie }}" >{{ movie }}</a>
             </td>
         </tr>
 
