--- a/templates/register.html
+++ b/templates/register.html
@@ -14,14 +14,15 @@
     {% csrf_token %}
     <table border="1" cellspacing="1" cellpadding="4">
         <p>姓名:{{ postform.username }}</p>
-        <p>帳號:{{ postform.acc }}{{ postform.errors.acc.0 }}</p>
+        <p>帳號:{{ postform.acc }}{{ postform.errors.acc }}</p>
         <p>密碼:{{ postform.pwd }}</p>
-        <p>email:{{ postform.email }}</p>
+        <p>email:{{ postform.email }}{{ postform.errors.email }}</p>
         <p>tel:{{ postform.tel }}</p>
         
         <input type="submit" value="送出資料"/> <input type="reset" value="重設"/>
     </table>
 
 </form>
+
 接收到的資料:{{ mess }}
 {% endblock %}  
