--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#trending">電影熱映</a>
+                        <a class="nav-link" href="/hot">電影熱映</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/type">類型</a>
