--- a/templates/hot.html
+++ b/templates/hot.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+{% block header %}
+<h1>test</h1>
+<span class="subheading">test   </span>
+{% endblock %}
 {% block content %}
 <div id="trending" class="row">
     <h1>正在趕工中</h1>
