--- a/templates/theaterShow.html
+++ b/templates/theaterShow.html
@@ -24,6 +24,7 @@
                     <p class="text-muted mb-0 text-start">導演 : {{ movie_obj.director }}</p>
                     <p class="text-muted mb-0 text-start">演員 : {{ movie_obj.cast }}</p>
                     <p class="text-muted mb-0 text-start">片長 : {{ movie_obj.time }}</p>
+                    <p class="text-muted mb-0 text-start">分級 : {{ movie_obj.level }}</p>
             </div>
         <hr class="divider mt-5"/>
         <h2 class="text-center">電影簡介</h2>
