--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/login">登入</a></li>
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/register">註冊</a></li>
                     {% endif %}
-                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/hot">電影熱映</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/hot">電影熱映</a></li> -->
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/type">類型</a></li>
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/theater">影城</a></li>
                     <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/favorite">收藏清單</a></li>
