--- a/templates/typeShowMovie.html
+++ b/templates/typeShowMovie.html
@@ -1,25 +1,26 @@
 {% extends 'base.html' %}
+{% block header %}
+<h1>{{ movieType }}</h1>
+<span class="subheading">所有{{ movieType }}類型電影</span>
+{% endblock %}
 {% block content %}
-<table>
-    
-    
+<!-- Main Content-->
+<div id="trending" class="row">
+<!-- 只顯示相框和資訊 -->
 {% for movie in movielist %}
+    <div class="col-md-3">
+        <div class="card">
+            <!-- 圖片和簡要資訊相框 -->
+            <a href="/movie/{{ movie.id }}">
+                <img src="{{ movie.img_src }}" class="card-img-top" alt="{{ movie.title }}" >
             
-    <tr>
-        <td>{{ movie.title }}<br>
-            {{ movie.title_en }}<br>
-            {{ movie.time }}<br>
-            {{ movie.release_date }}<br>
-            {{ movie.type }}<br>
-            {{ movie.director }}<br>
-            {{ movie.cast }}<br>
-            {{ movie.theater_name }}
-            <a href="/movie/{{ movie.id }}">連結</a>
-        </td>
-        <td><img src="{{ movie.img_src }}" width="400" height="400"></td>
-
-    </tr>
+                <div class="card-body">
+                    <h5 class="card-title">{{ movie.title }}</h5>
+                    <h6 class="card-text">{{ movie.release_date }}</h6>
+                </div>
+            </a>
+        </div>
+    </div>
 {% endfor %}
-
-</table>
+</div>
 {% endblock %}
