--- a/templates/movie_info.html
+++ b/templates/movie_info.html
@@ -44,11 +44,7 @@
     </div>
 </section>
 <hr class="divider mt-5"/>
-<h2 class="text-center">留言</h2>
-
-
-
-
+<h2 class="text-center">評論</h2>
 {% if text_info %}
 <!-- Main Content-->
 <div class="container px-4 px-lg-5">
@@ -68,7 +64,8 @@
             {% endfor %}
             {% else %}
             <div class="post-preview">
-                <h2 style="text-align: center;">尚未加入電影</h2>
+                <h5 style="text-align: center;">尚無留言
+                </h5>
             </div>
         </div>
     </div>
