--- a/templates/home.html
+++ b/templates/home.html
@@ -25,6 +25,15 @@
         </div>
     {% endfor %}
 </div>
+
+<nav>
+    <ul class="pagination justify-content-center">
+    {% for page in max_page %}
+    <li class="page-item"><a class="page-link" href="/movielist/{{ page }}/">{{ page }}</a></li>
+    {% endfor %}
+    </ul>
+</nav>
+
 {% endblock %}
 
 
